# namel3ss

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DECISIONS.md  Dockerfile  ECOSYSTEM.md  GOVERNANCE.md  MANIFEST.in  NOTICE  PATTERNS.md  README.md  RFC_PROCESS.md  ROADMAP.md  SECURITY.md  UPGRADE.md  VERSION  docker-compose.yml  pyproject.toml  release_report.json  release_report.txt  tmp_app.ai  tmp_cli_action_app.ai
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: design-discussion.md  help-qa.md  show-and-tell.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  bug_report.yml  config.yml  design_feedback.md  docs.yml  dx.yml  feature_request.md  feature_request.yml  question.yml  rfc.yml  tests.yml
.github/workflows/: ci.yml  package-ci.yml  release.yml
app/: app.ai
apps/rag-application/: app.ai
data/: README.md
docs/: ai-language-definition.md  app-packaging.md  app-permissions.md  architecture_overview.md  authentication.md  benchmarks.md  beta-checklist.md  build-exists.md  capabilities.md  cli-exists.md  cli-fix.md  cli-what.md  cli-when.md  cli-with.md  cli.md  community-stewardship.md  compatibility_policy.md  compute-core.md  concurrency.md  console-feedback-marketplace.md  contract-freeze.md  conventions.md  core-runtime-language-evolution.md  cross-language-compilation.md  data.md  decoupled-ui-api-first.md  dependency-management.md  deployment.md  deprecation.md  deprecation_policy.md  ecosystem-developer-experience.md  editor.md  errors-fix.md  errors.md  execution-how.md  explainability.md  expression-surface.md  expressions-and-conditionals.md  extensions.md  first-5-minutes.md  (+89 more)
docs/composition/: includes.md
docs/contracts/: embedding.md  ir_executor.md
docs/determinism/: regression_suite.md
docs/diagnostics/: retrieval_trace.md
docs/education/: README.md  catalog.yaml  certifications.yaml  events.yaml
docs/examples/: demo_ai_assistant_over_records.md  demo_crud_dashboard.md  demo_onboarding_flow.md
docs/governance/: compatibility.md  contributing.md  deprecations.md
docs/graduation/: core_stable.md
docs/grammar/: current.md
docs/i18n/: localization_guide.md
docs/language/: application-data-model.md  application-runtime.md  application-ui-model.md  backend-capabilities.md  backward_compatibility.md  capability-packs.md  composition_contract.md  contract_locations.md  error_conventions.md  grammar_contract.md  ir_schema.md  lowering_contract.md  native_boundary.md  no-dependencies.md  ordering_rules.md  reserved-words.md  rfc_process.md  specification.md
docs/manifest/: composition_rules.md
docs/models/: capsule.md  engine.md  identity.md  observe.md  package.md  proof.md  secrets.md  verify.md
docs/patterns/: ingestion_dashboard.md  rag_chat.md
docs/plugins/: plugin_dev_guide.md
docs/rag/: advanced_custom_answer_flow.md  overview.md
docs/reports/: README.md  baseline_metrics.json  code_audit.md  rag_demo_runtime_limitations.md
docs/retrieval/: tuning.md
docs/runtime/: agent_contracts.md  agent_full_custom.md  audit_replay.md  browser-protocol.md  headless_contracts.md  ingestion.md  ingestion_diagnostics.md  persistence_targets.md  retrieval.md  retrieval_determinism.md  retrieval_flows.md  runtime_errors.md  service-mode.md
docs/security/: capability.md  compliance.md  provenance.md  threat-model-ingestion.md  threat-model-memory.md  threat-model-orchestration.md  tool-validation.md
docs/spec/: contracts.md  errors.md  grammar.md  namel3ss_spec.md  retrieval_semantics.md  runtime_semantics.md
docs/specs/: layout_interaction_spec.md
docs/theme/: system.md
docs/tutorials/: building_rag_app.md  new_layouts.md
docs/ui/: accessibility.md  citations.md  conditional-ui.md  diagnostics.md  interim_retrieval_controls.md  overview.md  patterns.md  slider.md  theme_tokens.md  tooltip.md  uploads.md
evals/: suite.json
examples/: README.md  demo_ai_assistant_over_records.ai  demo_ai_assistant_ui.ai  demo_crud_dashboard.ai  demo_multi_agent_orchestration.ai  demo_multi_agent_workflow.ai  demo_onboarding_flow.ai  demo_order_totals.ai  demo_product_dashboard.ai  providers_tier1.ai
examples/access_control/: README.md
examples/b1_exists/: README.md  app.ai
examples/b2_fix/: README.md
examples/b3_what/: README.md  app.ai
examples/b4_when/: README.md
examples/b5_with/: README.md
examples/build_exists/: README.md
examples/control_flow/: README.md  app.ai
examples/demo_packages/: app.ai  namel3ss.toml
examples/error_guidance/: README.md  app.ai
examples/errors_fix/: app.ai
examples/execution_how/: app.ai
examples/flagship_demo/: app.ai
examples/flow_branching/: README.md
native/: Cargo.toml  README.md
patterns/: index.json
resources/: beta_surfaces.json  invariants.md  invariants_v1.json  invariants_v1.md  learning_namel3ss_v0.1.0.md  limitations.md  pkg_index_v1.json  registry_entry_v1.json  spec_versions.json  surface_catalog.json
rfcs/: README.md  TEMPLATE.md
scripts/: audit_codebase.py  convert_state_to_training_dataset.py  export_runtime_contract_schema.py  measure_baseline.py  refresh_foundation_reports.sh
src/: namel3ss_safeio.py
templates/: README.md  index.md
tests/: _ci_debug.py  conftest.py  test_cli_install.py
tools/: app_archive.py  app_packager.py  bench.py  build_renderer_manifest.py  clean_pattern_artifacts.py  compileall_wrapper.py  contract_compat_check.py  contract_migrate.py  determinism_repeat_check.py  docker_build_guard.py  docs_example_extract.py  export_guard.py  fx_api.py  generate_parser.py  grammar_snapshot.py  line_limit_check.py  memory_import_guard.py  memory_proof_check.py  memory_proof_generate.py  native_check.py  native_verify.py  package_verify.py  release_gate_report.py  release_guard.py  release_manifest.py  release_notes.py  responsibility_check.py  rfc_compliance_check.py  security_hardening_scan.py  spec_build_snapshot.py  spec_diff_check.py  spec_freeze_check.py  top_files.py  ui_baseline_refresh.py  ui_baseline_targets.py  weather_api.py  wheel_install_check.py
(+3789 files in other folders)
