[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "namel3ss"
version = "0.1.0a9"
description = "An AI-native programming language with deterministic execution, explainability, and governed memory."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "namel3ss", email = "info@namel3ss.com" },
]
keywords = ["ai", "agents", "dsl", "programming-language", "ollama", "openai"]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/namel3ss-Ai/namel3ss"
Repository = "https://github.com/namel3ss-Ai/namel3ss"
Documentation = "https://github.com/namel3ss-Ai/namel3ss/tree/main/docs"
Issues = "https://github.com/namel3ss-Ai/namel3ss/issues"
Changelog = "https://github.com/namel3ss-Ai/namel3ss/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7",
]
postgres = [
    "psycopg[binary]>=3",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"namel3ss.templates" = [
    "**/*.ai",
    "**/*.md",
    "**/*.toml",
    "**/*.json",
    "**/*.html",
    "**/*.css",
    "**/*.js",
    "**/*.svg",
    "**/*.png",
    "**/*.jpg",
    "**/*.jpeg",
    "**/*.webp",
    "**/.gitignore",
]
"namel3ss.examples" = [
    "**/*.ai",
    "**/*.md",
    "**/*.toml",
    "**/*.json",
    "**/*.html",
    "**/*.css",
    "**/*.js",
    "**/*.svg",
    "**/*.png",
    "**/*.jpg",
    "**/*.jpeg",
    "**/*.webp",
]
"namel3ss.demos" = [
    "**/*.ai",
    "**/*.md",
    "**/*.toml",
    "**/*.json",
    "**/*.html",
    "**/*.css",
    "**/*.js",
    "**/*.svg",
    "**/*.png",
    "**/*.jpg",
    "**/*.jpeg",
    "**/*.webp",
]
"namel3ss.runtime" = [
    "web/*.html",
    "web/*.css",
    "web/*.js",
]
"namel3ss.studio.web" = ["**/*"]

[tool.setuptools.data-files]
"resources/icons/actions" = ["resources/icons/actions/*"]
"resources/icons/navigation" = ["resources/icons/navigation/*"]
"resources/icons/status" = ["resources/icons/status/*"]
"resources/icons/tools" = ["resources/icons/tools/*"]
"resources/icons/data" = ["resources/icons/data/*"]
"resources/icons/content" = ["resources/icons/content/*"]
"resources/icons/communication" = ["resources/icons/communication/*"]
"resources/icons/delight" = ["resources/icons/delight/*"]
"resources/icons/identity" = ["resources/icons/identity/*"]
"resources/icons/search" = ["resources/icons/search/*"]

[project.scripts]
n3 = "namel3ss.cli.main:main"
